package pt.ipp.isep.dei.esoft.project.domain.Places;

public class Role {

}
