@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Project - Domain Model

class Adress{
street
city
doorNr
floorNr
state
postalCode
}

class District {
}

class Advertisement {
}

class Store {
    storeName
    phoneNumber
    emailAddress
}
class Branch {
    designation
    location
    localManager
}

class Agent {
    name
    citizenCardNumber
    tax number
    address
    email
    phoneNumber
    agency
}

class Property {
    area
    location
    distanceFromCityCentre
    requestedPrice
    typeOfProperty
    photographs
}
class Residence{
numberOfBedrooms
numberOfBathrooms
numberOfParkingSpaces
availableEquipment
}

class Advertisement {
    date
}

class AppartmentOrHouse {
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
}

class Comission {
    fixed
    percentage
}
class SystemAdministrator{
  name
  email
  citizenCardNumber
  taxNumber
  physycalAdress
  phoneNumber
}


class Employee {
    name
    citizenCardNumber
    adress
    email
    phoneNumber
    taxNumber
    agency
}

class CompanyBranch{
id
name
location
phoneNumber
email
}

class Owner{
name
citizenCardNumber
taxNumber
email
phoneNumber
}

class Role{
}
class Address {
    street
    postalCode
    doorNumber
    floorNumber
    city
    state
}
class InitialData{
propertiesNumber
propertyType
saleOrRent
}
class House{
basement
loft
sunExposure
}

class Apartment{
}
class Land{
}


SystemAdministrator "1" -- "0..*" Store : registers >
Store "1" -- "1" Address : has  >

SystemAdministrator "1"--"0...*" Employee: registed by <
SystemAdministrator "1"--"1" Employee: is >
Employee "1"--"1" CompanyBranch: works for >
Employee "0...*"--"1...*" Role: has >
Branch "1" -- "*" Agent : has >
Agent "1" -- "*" Advertisement : creates >
Owner "1" -- "1" Property : owns >
Advertisement "1" - "1" Property : has >
Property "1" -- "1" AppartmentOrHouse : can be >
AppartmentOrHouse "1" - "1" House : can be >
AppartmentOrHouse "1" - "1" Apartment : can be >
Advertisement "1" -- "1" Comission : has >
Agent "1" - "1" Comission : defines >

Store "1"-- "*" Advertisement : displays >
Store "1" -- "1" Adress : has  >
Adress "1" -- "1" District : is in >

Agent "1" -- "1  " Address : has  >

Owner "1" -- "0...*" InitialData : specify >
Owner "1" -- "1" Agent : selects >
Owner "1" -- "1" Address : has  >

InitialData "1" -- "1" Property : includes >

Property <|--  Residence
Property <|-- Land

Residence <|-- House
Residence <|-- Apartment
@enduml